fixes desktop overflow

--- a/style.css
+++ b/style.css
@@ -143,9 +143,9 @@ body a.btn {border:none;border-radius:6px;font-weight:bold;display:inline-block;
   #dynamicLoad {
     background-color:rgba(255,255,255,0.3);
     box-shadow:0 0 140px -25px rgba(0,0,0,.6);
-    max-height:100vh;
+    max-height:calc(100vh - 100px);
     overflow-y:auto;
-    padding:0 0 50px;
+    padding:50px 0;
   }
 }
 @media screen and (min-width:1200px) {
